@@ -31,7 +31,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT '1' b, 2 as C;";
             final var parsed = sqlParser.parse(sql);
             assertEquals(2, parsed.getColumns().size());
-            assertFragmentEquals(Constant.class, "'1'", "b", parsed.getColumns().get(0));
+            assertFragmentEquals(Constant.class, "'1'", "b", parsed.getColumns().getFirst());
             assertFragmentEquals(Constant.class, "2", "c", parsed.getColumns().get(1));
         }
 
@@ -90,7 +90,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT a, b, c FROM table;";
             final var parsed = sqlParser.parse(sql);
             assertEquals(3, parsed.getColumns().size());
-            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Column.class, "b", null, parsed.getColumns().get(1));
             assertFragmentEquals(Column.class, "c", null, parsed.getColumns().get(2));
         }
@@ -101,7 +101,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT a, b as 2, c FROM table;";
             final var parsed = sqlParser.parse(sql);
             assertEquals(3, parsed.getColumns().size());
-            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Column.class, "b", "2", parsed.getColumns().get(1));
             assertFragmentEquals(Column.class, "c", null, parsed.getColumns().get(2));
         }
@@ -117,7 +117,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT count(*), a FROM table;";
             final var parsed = sqlParser.parse(sql);
             assertEquals(2, parsed.getColumns().size());
-            assertFragmentEquals(Column.class, "count(*)", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Column.class, "count(*)", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Column.class, "a", null, parsed.getColumns().get(1));
         }
 
@@ -127,7 +127,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT a, count(*) FROM table;";
             final var parsed = sqlParser.parse(sql);
             assertEquals(2, parsed.getColumns().size());
-            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Column.class, "count(*)", null, parsed.getColumns().get(1));
         }
 
@@ -146,7 +146,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT a, max(cost) as m, avg(t) as a, b as d, c, count(*) as c1 FROM table;";
             final var parsed = sqlParser.parse(sql);
             assertEquals(6, parsed.getColumns().size());
-            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Column.class, "max(cost)", "m", parsed.getColumns().get(1));
             assertFragmentEquals(Column.class, "avg(t)", "a", parsed.getColumns().get(2));
             assertFragmentEquals(Column.class, "b", "d", parsed.getColumns().get(3));
@@ -202,7 +202,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             assertFragmentEquals(Query.class, nested, null, parsed.getColumns().getFirst());
             final var nestedQuery = (Query) parsed.getColumns().getFirst();
             assertEquals(2, nestedQuery.getColumns().size());
-            assertFragmentEquals(Column.class, "a", null, nestedQuery.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", null, nestedQuery.getColumns().getFirst());
             assertFragmentEquals(Column.class, "b", null, nestedQuery.getColumns().get(1));
         }
 
@@ -216,7 +216,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             assertFragmentEquals(Query.class, nested, "t", parsed.getColumns().getFirst());
             final var nestedQuery = (Query) parsed.getColumns().getFirst();
             assertEquals(2, nestedQuery.getColumns().size());
-            assertFragmentEquals(Column.class, "a", "b", nestedQuery.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", "b", nestedQuery.getColumns().getFirst());
             assertFragmentEquals(Column.class, "c", "d", nestedQuery.getColumns().get(1));
         }
 
@@ -228,19 +228,19 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT x, (%s) AS T, (%s), y FROM table;".formatted(nested1, nested2);
             final var parsed = sqlParser.parse(sql);
             assertEquals(4, parsed.getColumns().size());
-            assertFragmentEquals(Column.class, "x", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Column.class, "x", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Query.class, nested1, "t", parsed.getColumns().get(1));
 
             final var nestedQuery1 = (Query) parsed.getColumns().get(1);
             assertEquals(2, nestedQuery1.getColumns().size());
-            assertFragmentEquals(Column.class, "a", "b", nestedQuery1.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", "b", nestedQuery1.getColumns().getFirst());
             assertFragmentEquals(Column.class, "c", "d", nestedQuery1.getColumns().get(1));
 
             assertFragmentEquals(Query.class, nested2, null, parsed.getColumns().get(2));
 
             final var nestedQuery2 = (Query) parsed.getColumns().get(2);
             assertEquals(2, nestedQuery2.getColumns().size());
-            assertFragmentEquals(Column.class, "e", null, nestedQuery2.getColumns().get(0));
+            assertFragmentEquals(Column.class, "e", null, nestedQuery2.getColumns().getFirst());
             assertFragmentEquals(Column.class, "f", null, nestedQuery2.getColumns().get(1));
 
             assertFragmentEquals(Column.class, "y", null, parsed.getColumns().get(3));
@@ -254,17 +254,17 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT x, (%s) AS T, (%s), y FROM table;".formatted(nested1, nested2);
             final var parsed = sqlParser.parse(sql);
             assertEquals(4, parsed.getColumns().size());
-            assertFragmentEquals(Column.class, "x", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Column.class, "x", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Query.class, nested1, "t", parsed.getColumns().get(1));
             assertFragmentEquals(Query.class, nested2, null, parsed.getColumns().get(2));
             assertFragmentEquals(Column.class, "y", null, parsed.getColumns().get(3));
             final var nestedQuery1 = (Query) parsed.getColumns().get(1);
             assertEquals(2, nestedQuery1.getColumns().size());
-            assertFragmentEquals(Column.class, "a", "b", nestedQuery1.getColumns().get(0));
+            assertFragmentEquals(Column.class, "a", "b", nestedQuery1.getColumns().getFirst());
             assertFragmentEquals(Column.class, "c", "d", nestedQuery1.getColumns().get(1));
             final var nestedQuery2 = (Query) parsed.getColumns().get(2);
             assertEquals(2, nestedQuery2.getColumns().size());
-            assertFragmentEquals(Column.class, "e", null, nestedQuery2.getColumns().get(0));
+            assertFragmentEquals(Column.class, "e", null, nestedQuery2.getColumns().getFirst());
             assertFragmentEquals(Column.class, "f", null, nestedQuery2.getColumns().get(1));
         }
     }
@@ -297,7 +297,7 @@ public class ColumnParserIT extends AbstractSpringParserTest {
             final var sql = "SELECT 1, a, 2 as b, c FROM table;";
             final var parsed = sqlParser.parse(sql);
             assertEquals(4, parsed.getColumns().size());
-            assertFragmentEquals(Constant.class, "1", null, parsed.getColumns().get(0));
+            assertFragmentEquals(Constant.class, "1", null, parsed.getColumns().getFirst());
             assertFragmentEquals(Column.class, "a", null, parsed.getColumns().get(1));
             assertFragmentEquals(Constant.class, "2", "b", parsed.getColumns().get(2));
             assertFragmentEquals(Column.class, "c", null, parsed.getColumns().get(3));
@@ -325,19 +325,19 @@ public class ColumnParserIT extends AbstractSpringParserTest {
         final var sql = "SELECT x, (%s), (%s) 'i', y z FROM table;".formatted(nested1, nested2);
         final var parsed = sqlParser.parse(sql);
         assertEquals(4, parsed.getColumns().size());
-        assertFragmentEquals(Column.class, "x", null, parsed.getColumns().get(0));
+        assertFragmentEquals(Column.class, "x", null, parsed.getColumns().getFirst());
         assertFragmentEquals(Query.class, nested1, null, parsed.getColumns().get(1));
         assertFragmentEquals(Query.class, nested2, "'i'", parsed.getColumns().get(2));
         assertFragmentEquals(Column.class, "y", "z", parsed.getColumns().get(3));
         final var nestedQuery1 = (Query) parsed.getColumns().get(1);
         assertEquals(4, nestedQuery1.getColumns().size());
-        assertFragmentEquals(Column.class, "a", "b", nestedQuery1.getColumns().get(0));
+        assertFragmentEquals(Column.class, "a", "b", nestedQuery1.getColumns().getFirst());
         assertFragmentEquals(Constant.class, "'1'", "c", nestedQuery1.getColumns().get(1));
         assertFragmentEquals(Constant.class, "2", "d", nestedQuery1.getColumns().get(2));
         assertFragmentEquals(Column.class, "count(a.id)", "e", nestedQuery1.getColumns().get(3));
         final var nestedQuery2 = (Query) parsed.getColumns().get(2);
         assertEquals(5, nestedQuery2.getColumns().size());
-        assertFragmentEquals(Column.class, "f", "g", nestedQuery2.getColumns().get(0));
+        assertFragmentEquals(Column.class, "f", "g", nestedQuery2.getColumns().getFirst());
         assertFragmentEquals(Constant.class, "2", null, nestedQuery2.getColumns().get(1));
         assertFragmentEquals(Column.class, "max(h)", null, nestedQuery2.getColumns().get(2));
         assertFragmentEquals(Query.class, nested1, null, nestedQuery2.getColumns().get(3));
